chat function can work frequently basically